--- a/functions.html
+++ b/functions.html
@@ -8,7 +8,7 @@
      <!-- <link rel="stylesheet" href="./csssheet/func.css">   -->
 </head>
 <body>
-    <!-- <div class="functions">
+     <div class="functions">
     <h4>working with javascript Functions#</h4>
     <form>
 
@@ -24,7 +24,7 @@
         <input type="number" id="answer">
       
     </form>
-</div> -->
+</div> 
 
 
 <!-- <div class="functions">
